# PE-Bench

./: .env.example  .gitignore  ANONYMIZATION.md  DATA_LICENSE.md  LICENSE  README.md  croissant_metadata.json  pyproject.toml  requirements.txt
artifacts/: README.md
docs/: ARTIFACT_LAYOUT.md  ARTIFACT_OVERVIEW.md  BENCHMARK_CARD.md  CLEANROOM_VERIFICATION.md  DATASET_CARD.md  EVALUATOR_CARD.md  NEURIPS_ED_CHECKLIST.md  NON_USE_STATEMENT.md  QUICKSTART_REPRODUCIBILITY.md  RELEASE_CHECKLIST.md  RESPONSIBLE_AI_METADATA.md  WORKSPACE_LAYOUT.md  pebench_v1.md  task_cards_table.md
flybackbench/: __init__.py
pebench/: __init__.py
scripts/: __init__.py  analyze_results.py  build_dataset_artifacts.py  build_literature_provenance.py  build_paper_tables.py  build_release_artifacts.py  compare_api_evidence_to_paper.py  compare_results_stats.py  doctor_plecs_backend.py  export_anonymous_artifact.py  freeze_api_run_records.py  harvest_flyback_literature.py  promote_api_run_evidence.py  reproduce_paper_tables.py  reviewer_smoke_test.py  run_all_experiments.sh  run_baseline.py  run_easy_tier_audit.py  run_evaluator.py  run_final78_experiments.py  run_official_experiments.py  run_paper_main_raw_evidence.py  run_pebench_suite.py  run_suite.py  summarize_pebench_results.py  summarize_results.py  validate_croissant_metadata.py  validate_inverter_tasks.py  validate_public_artifact.py  validate_reference_designs.py  validate_tasks.py  validate_topology_full_tasks.py
tests/: test_artifact_outputs.py  test_dev_v2_pipeline.py  test_evaluator.py  test_inverter_tasks.py  test_io.py  (+9 more)
(+273 files in other folders)
